--- a/config/locales/models/weather_datum.ru.yml
+++ b/config/locales/models/weather_datum.ru.yml
@@ -4,7 +4,18 @@ ru:
       models:
         weather_datum:
           attributes:
-            wind_direction:
-              inclusion: 'Направление ветра должно быть задано в диапазоне от 0 до 359 градусов'
             actual_on:
               blank: 'Дата должна быть заполнена.'
+            altitude:
+              blank: 'Высота должа быть заполнена.'
+              greater_than_or_equal_to: 'Высота должна быть больше, либо равна нулю.'
+              not_a_number: 'Высота должна быть числовым значением.'
+            wind_speed:
+              blank: 'Скорость ветра должна быть заполнена.'
+              greater_than_or_equal_to: 'Скорость ветра должна быть больше, либо равна нулю.'
+              not_a_number: 'Скорость ветра должна быть числовым значением.'
+            wind_direction:
+              blank: 'Направление ветра должно быть заполнено.'
+              less_than: 'Направление ветра должно быть задано в диапазоне от 0 до 360 градусов'
+              greater_than_or_equal_to: 'Направление ветра должно быть задано в диапазоне от 0 до 360 градусов' 
+              not_a_number: 'Направление ветра должно быть числовым значением.'
