--- a/config/locales/models/units.en.yml
+++ b/config/locales/models/units.en.yml
@@ -1,7 +1,9 @@
 en:
   units:
-    m: 'm'
-    ft: 'ft'
-    kmh: 'km/h'
-    mph: 'mph'
-    t_unit: "s"
+    m: m
+    ft: ft
+    kmh: km/h
+    mph: mph
+    t_unit: s
+    ms: m/s
+    knots: knots
