#17 Отображение результатов с учетом влияния ветра
Реализована возможность включения/выключение вычитания ветра для
соревнований
Реализована возможность переключения отображения результатов -
отображать с влиянием ветра и без влияния ветра.
Переключение статуса соревнования вынесено в панель над таблицей.
Рефакторинг.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,8 @@ en:
     update: "Update"
     delete: "Delete"
     edit: "Edit"
+    enabled: 'Enabled'
+    disabled: 'Disabled'
   disciplines:
     speed: 'Speed'
     distance: 'Distance'
