--- a/config/locales/views/events/show.ru.yml
+++ b/config/locales/views/events/show.ru.yml
@@ -34,3 +34,8 @@ ru:
       judges: 'Судьи'
       add_judge: 'Добавить судью'
       weather_data: 'Сведения о ветре'
+      wind_cancellation_enabled: 'В этом соревновании учитывается влияние ветра.'
+      wind_cancellation_disabled: 'В этом соревновании влияние ветра не учитывается.'
+      results_showing: 'Результаты: '
+      results_adjusted_caption: 'с учетом влияния ветра'
+      results_not_adjusted_caption: 'без учета влияния ветра'
