--- a/config/locales/models/events.en.yml
+++ b/config/locales/models/events.en.yml
@@ -8,6 +8,8 @@ en:
         status: 'Status'
         place: 'Place'
         starts_at: 'Starts at'
+        rules: 'Rules'
+        wind_cancellation: 'Wind cancellation'
   event_status: 
     draft: 'Draft'
     published: 'Published'
