--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -32,3 +32,8 @@ en:
       judges: 'Judges'
       add_judge: 'Add judge'
       weather_data: 'Wind conditions'
+      wind_cancellation_enabled: 'This competition uses wind cancellation feature.'
+      wind_cancellation_disabled: 'This competition does not use wind cancellation feature.'
+      results_showing: 'Results are '
+      results_adjusted_caption: 'adjusted for wind'
+      results_not_adjusted_caption: 'not adjusted for wind'
