--- a/config/locales/models/competitors.ru.yml
+++ b/config/locales/models/competitors.ru.yml
@@ -21,4 +21,5 @@ ru:
               blank: "Не заполнено обязательное поле 'Класс'"
             base:
               restrict_dependent_destroy:
-                many: 'Для удаления участника необходимо сначала удалить его результаты.'
+                many: Для удаления участника необходимо сначала удалить его результаты.
+              event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
