--- a/config/locales/models/event_organizers.ru.yml
+++ b/config/locales/models/event_organizers.ru.yml
@@ -10,4 +10,5 @@ ru:
         event_organizer:
           attributes:
             profile: Профиль должен быть заполнен
-
+            base:
+              event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
