--- a/config/locales/models/event_tracks.ru.yml
+++ b/config/locales/models/event_tracks.ru.yml
@@ -13,4 +13,6 @@ ru:
         event_track:
           attributes:
             result:
-              duplicate: 'Для данного участника в этом раунде результат уже загружен. Обновите страницу.'
+              duplicate: Для данного участника в этом раунде результат уже загружен. Обновите страницу.
+            base:
+              event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
