--- a/config/locales/models/rounds.en.yml
+++ b/config/locales/models/rounds.en.yml
@@ -6,4 +6,5 @@ en:
           attributes:
             base:
               restrict_dependent_destroy:
-                many: 'Delete round results first'
+                many: Delete round results first
+              event_finished: Changes couldn't be made because event is finished.
