--- a/config/locales/models/rounds.ru.yml
+++ b/config/locales/models/rounds.ru.yml
@@ -6,4 +6,5 @@ ru:
           attributes:
             base:
               restrict_dependent_destroy:
-                many: 'Перед удалением раунда необходимо удалить результаты раунда.'
+                many: Перед удалением раунда необходимо удалить результаты раунда.
+              event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
