--- a/config/locales/models/sections.ru.yml
+++ b/config/locales/models/sections.ru.yml
@@ -14,3 +14,4 @@ ru:
             base:
               restrict_dependent_destroy:
                 many: Перед удалением класса необходимо удалить или переместить из него участников.
+              event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
