--- a/config/locales/models/event_tracks.ru.yml
+++ b/config/locales/models/event_tracks.ru.yml
@@ -12,7 +12,10 @@ ru:
       models:
         event_track:
           attributes:
+            track:
+              blank: Не выбран трек для расчета результата.
             result:
               duplicate: Для данного участника в этом раунде результат уже загружен. Обновите страницу.
             base:
               event_finished: Изменения не могут быть выполнены, т.к. соревнование завершено.
+              track_file_blank: Результат не может быть расчитан, т.к не указан файл для загрузки.
