Replace span with label, remove colons

--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -16,16 +16,16 @@ ru:
       online_comps_leaders: 'Лидеры онлайн соревнований'
       donate: 'Если Вам нравится Skyderby - Вы можете оказать проекту финансовую поддержку.'
       track_form:
-        title: 'Посмотреть и оценить трек:'
-        name: 'Вас зовут:'
+        title: 'Посмотреть и оценить трек'
+        name: 'Вас зовут'
         name_plh: 'Имя Ф.'
-        suit: 'Вы летаете в:'
+        suit: 'Вы летаете в'
         suit_plh: 'Модель вингсьюта'
-        location: 'Локация:'
+        location: 'Локация'
         location_plh: 'ДЗ, горы, и т.д.'
-        file: "Файл трека:"
+        file: "Файл трека"
         help: 'Поддерживаются файлы в формате csv, gpx, tes и kml'
-        comment: 'Комментарий:'
+        comment: 'Комментарий'
         comment_plh: 'Пара слов о Вашем полете'
         submit: 'Загрузить'
         warnings:
