--- a/config/locales/views/static_pages/index.en.yml
+++ b/config/locales/views/static_pages/index.en.yml
@@ -16,16 +16,16 @@ en:
       online_comps_leaders: 'Online competitions leaders'
       donate: 'If you like Skyderby - you can support project by making donation.'
       track_form:
-        title: 'See and analyze your track:'
-        name: 'Your name is:'
+        title: 'See and analyze your track'
+        name: 'Your name is'
         name_plh: 'John D.'
-        suit: "You're flying a:"
+        suit: "You're flying a"
         suit_plh: 'Wingsuit model'
-        location: 'It was at:'
+        location: 'It was at'
         location_plh: 'Some DZ, some cliffs, etc'
-        file: 'File with track:'
+        file: 'File with track'
         help: 'Supported csv (Columbus, FlySight), gpx, tes and kml format'
-        comment: 'Comment:'
+        comment: 'Comment'
         comment_plh: 'Share a few words about your flight'
         submit: 'Upload'
         warnings:
