--- a/config/locales/models/competitors.de.yml
+++ b/config/locales/models/competitors.de.yml
@@ -19,4 +19,4 @@ de:
             base:
               restrict_dependent_destroy:
                 many: Um einen Wettkämpfer zu löschen müssen seine Ergebnisse vorher gelöscht werden.
-              event_finished: Es konnten keine Änderungen vorgenommen werden, da der Wettkampf beendet ist.
+              event_finished: Es konnten keine Änderungen vorgenommen werden, da der Wettkampf bereits beendet ist.
