--- a/config/locales/views/tracks/replay.de.yml
+++ b/config/locales/views/tracks/replay.de.yml
@@ -4,4 +4,4 @@ de:
       altitude: Höhe
       vertical_speed: Vertikale Geschwindigkeit
       horizontal_speed: Horizontale Geschwindigkeit
-      glide_ratio: Qualität
+      glide_ratio: Gleitzahl
