--- a/config/locales/views/virtual_competitions/show.de.yml
+++ b/config/locales/views/virtual_competitions/show.de.yml
@@ -2,4 +2,4 @@ de:
   virtual_competitions:
     show:
       show_details: 'Klicke hier für Trackdetails'
-      show_profile: 'Hier klicken für rofil'
+      show_profile: 'Hier klicken für Profil'
