--- a/config/locales/views/events/show.de.yml
+++ b/config/locales/views/events/show.de.yml
@@ -10,7 +10,7 @@ de:
       profile_placeholder: Wähle einen Piloten aus der Liste
       profile_or: Oder
       profile_choose: Wähle einen Piloten aus der Liste
-      suit: Suit:
+      suit: Suit
       suit_placeholder: Wähle eine Suit aus der Liste
       new: Neu
       edit: Bearbeiten
