--- a/config/locales/views/virtual_competitions/show.en.yml
+++ b/config/locales/views/virtual_competitions/show.en.yml
@@ -1,5 +1,15 @@
 en:
   virtual_competitions:
     show:
-      show_details: 'Click to view track details'
-      show_profile: 'Click to view profile'
+      show_details: Click to view track details
+      show_profile: Click to view profile
+    tasks:
+      speed: Task is to fly as fast as possible horizontally over the ground through the competition window (%{range_from} - %{range_to} m)
+      distance: Task is to fly as far as possible through the competition window (%{range_from} - %{range_to} m)
+      distance_in_time: Task is to fly as far as possible in %{parameter} sec
+      distance_in_altitude: Task is to fly as far as possible using %{parameter} meters of altitude
+      straightline_distance_in_time: Task is to fly as far as possible in %{parameter} sec. Distance measuring as a straight-line.
+      time: Task is to fly with the slowest fall rate possible through the competition window (%{range_from} - %{range_to} m)
+    place: 'Location:'
+    worldwide: Worldwide
+    suit: 'Suit type: %{suit}'
