--- a/config/locales/views/layouts/de.header.yml
+++ b/config/locales/views/layouts/de.header.yml
@@ -1,19 +1,20 @@
 de:
   application:
     header:
-      home: 'SKY DERBY'
-      tracks: 'Trackliste'
-      about: 'Über uns'
-      sign_in: 'Einloggen'
-      sign_up: 'Registrieren'
-      sign_out: 'Ausloggen'
-      login_email: 'E-Mail Adresse'
-      password: 'Passwort'
-      remember_me: 'Merken'
-      forgot_pass: 'Passwort vergessen?'
-      profile: "Profil"
-      admin_panel: 'Administrator-Panel'
-      track_analizer: 'Trackanalyse'
-      upload_track: "Track hochladen"
-      competitions: "Wettkampf"
-      places: 'Orte'
+      home: SKY DERBY
+      tracks: Trackliste
+      online_competitions: Online Wettbewerbe
+      competitions: Wettkampf
+      places: Orte
+      about: Über uns
+      sign_in: Einloggen
+      sign_up: Registriere'
+      sign_out: Ausloggen
+      login_email: E-Mail Adresse
+      password: Passwort
+      remember_me: Merken
+      forgot_pass: Passwort vergessen?
+      profile: Profil
+      admin_panel: Administrator-Panel
+      track_analizer: Trackanalyse
+      upload_track: Track hochladen
