--- a/config/locales/views/static_pages/index.de.yml
+++ b/config/locales/views/static_pages/index.de.yml
@@ -1,8 +1,7 @@
 de:
   static_pages:
     index:
-      title: "Flieg! Nimm am Wettbewerb teil! 
-      Gewinne!"
+      title: "Flieg! Nimm am Wettbewerb teil! Gewinne!"
       subtitle: "Immernoch beta"
       skyderby_is: 'Skyderby - ist...'
       tracks_analysis: 'GPS Track Analyse'
