--- a/config/locales/views/tracks/index.de.yml
+++ b/config/locales/views/tracks/index.de.yml
@@ -1,5 +1,8 @@
 de:
   tracks:
     index:
-      title: 'Geladene Tracks:'
-      all: 'Alle'
+      all: Alle
+      filters: Filter
+      filter_by_pilot: Nach Pilot
+      filter_by_suit: Nach Suit
+      filter_by_place: Nach Ort
