refactoring and fixing issues in track videos

--- a/config/locales/views/tracks/show.de.yml
+++ b/config/locales/views/tracks/show.de.yml
@@ -3,6 +3,7 @@ de:
     indicators:
       distance: Entfernung
       elevation: Höhendifferenz
+      altitude: Höhe
       ground_speed: Horizontale Geschwindigkeit
       vertical_speed: Vertikale Geschwindigkeit
       duration: Dauer
