--- a/config/locales/views/tracks/show.ru.yml
+++ b/config/locales/views/tracks/show.ru.yml
@@ -3,6 +3,7 @@ ru:
     indicators:
       distance: Дистанция
       elevation: Перепад высот
+      altitude: Высота
       ground_speed: Путевая скорость
       vertical_speed: Вертикальная скорость
       duration: Продолжительность
