--- a/config/locales/views/will_paginate.ru.yml
+++ b/config/locales/views/will_paginate.ru.yml
@@ -1,5 +1,6 @@
 ru:
   will_paginate:
-    previous_label: "&#8592; Пред."
-    next_label: "След. &#8594;"
-    page_gap: "&hellip;"
+    previous_label: '&#8592; Пред.'
+    next_label: 'След. &#8594;'
+    page_gap: '&hellip;'
+    load_more: Загрузить еще...
