--- a/config/locales/views/tracks/edit.es.yml
+++ b/config/locales/views/tracks/edit.es.yml
@@ -5,5 +5,5 @@ es:
       public: "Público"
       unlisted: "Oculto"
       private: "Privado"
-      elev_chart_html: "'La altitud'"
-      elevation_html: "'La altitud'"
+      elev_chart_html: "'Altitud'"
+      elevation_html: "'Altitud'"
