applying new design

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -50,6 +50,7 @@ de:
     update: "Aktualisierung"
     delete: "Entfernen"
     edit: "Korrigieren"
+    settings: Einstellungen
   users:
     profile:
       edit:
