--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,6 +9,7 @@ ru:
     cancel: "Отмена"
     create: "Добавить"
     save: "Сохранить"
+    saving: Сохранение…
     update: "Обновить"
     delete: "Удалить"
     edit: "Редактировать"
